// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test UserAvatar no user 1`] = `
<div>
  <div
    class="user-avatar"
  >
    <span
      class="ant-badge css-dev-only-do-not-override-hash"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-dev-only-do-not-override-hash"
        style="width: 28px; height: 28px; font-size: 14px;"
      >
        <svgr-url
          classname="default-avatar"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`test UserAvatar with subscription 1`] = `
<div>
  <div
    class="user-avatar"
  >
    <span
      class="ant-badge css-dev-only-do-not-override-hash"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-dev-only-do-not-override-hash"
        style="width: 28px; height: 28px; font-size: 14px;"
      >
        <svgr-url
          classname="default-avatar"
        />
      </span>
      <svgr-url
        classname="ant-scroll-number-custom-component badge"
        style="margin-top: 4px; right: 4px;"
      />
    </span>
  </div>
</div>
`;

exports[`test UserAvatar with user avatar 1`] = `
<div>
  <div
    class="user-avatar"
  >
    <span
      class="ant-badge css-dev-only-do-not-override-hash"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon css-dev-only-do-not-override-hash"
        style="width: 28px; height: 28px; font-size: 14px;"
      >
        <img
          alt="avatar"
          src="mock-avatar-src"
        />
      </span>
    </span>
  </div>
</div>
`;
